--- a/Views/Todo/_TodoListPartial.cshtml
+++ b/Views/Todo/_TodoListPartial.cshtml
@@ -3,7 +3,7 @@
 @foreach (var item in Model.fileList)
 {
     <div class="d-flex gap-2 border border-dark border-1 rounded-1 m-auto my-3 justify-content-between w-50 todo"
-        role="button" tabindex="0" data-id="@item.id" data-status="@item.response_status" data-deadline="@item.deadline_set" data-user="@item.staf_cd">
+         role="button" tabindex="0" data-id="@item.todo_no" data-status="@item.response_status" data-deadline="@item.deadline_set" data-user="@item.staf_cd">
         <div class="m-auto" style="width: 90%;" >
             <div class="d-flex justify-content-between fs-4 fw-bold my-1">
                 <div>
@@ -78,7 +78,7 @@
         </div>
         @if (item.sendUrl != null)
         {
-            <div class="d-flex m-auto" onclick="downloadFile(@(item.id))">
+            <div class="d-flex m-auto" onclick="downloadFile(@(item.todo_no))">
                 <svg width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path
                         d="M12.5535 16.5061C12.4114 16.6615 12.2106 16.75 12 16.75C11.7894 16.75 11.5886 16.6615 11.4465 16.5061L7.44648 12.1311C7.16698 11.8254 7.18822 11.351 7.49392 11.0715C7.79963 10.792 8.27402 10.8132 8.55352 11.1189L11.25 14.0682V3C11.25 2.58579 11.5858 2.25 12 2.25C12.4142 2.25 12.75 2.58579 12.75 3V14.0682L15.4465 11.1189C15.726 10.8132 16.2004 10.792 16.5061 11.0715C16.8118 11.351 16.833 11.8254 16.5535 12.1311L12.5535 16.5061Z"
