--- a/Views/Todo/Update.cshtml
+++ b/Views/Todo/Update.cshtml
@@ -144,33 +144,25 @@
                     </select>
                     <span asp-validation-for="@Model.staffList" class="text-danger"></span>
                 </div>
-                <div class="form-group mb-3">
-                    <label asp-for="@Model.create_user" class="form-label">作成者</label>
-                    <div class="d-flex">
-                        <p class="form-control w-25 border-none">
-                            @Html.DisplayFor(model => model.create_date)
-                        </p>
-                        <input asp-for="@Model.create_date" type="hidden"></input>
-                        <p class="form-control w-25">
-                            @Html.DisplayFor(model => model.create_user)
-                        </p>
-                        <input asp-for="@Model.create_user" type="hidden"></input>
+                <div class="form-group row mt-3" id="create_info">
+                    <div class="col-sm-6">
+                        <label class="control-label me-4" asp-for="@Model.create_user"></label>
+                        <input asp-for="@Model.create_user" class="form-control bg-white" type="text" readonly />
                     </div>
-                    
+                    <div class="col-sm-6">
+                        <label class="control-label me-4" asp-for="@Model.create_date"></label>
+                        <input asp-for="@Model.create_date" class="form-control bg-white" type="text" readonly />
+                    </div>
                 </div>
-                <div class="form-group mb-3">
-                    <label asp-for="@Model.update_user" class="form-label">更新者</label>
-                    <div class="d-flex">
-                        <p class="form-control w-25">
-                            @Html.DisplayFor(model => model.update_date)
-                        </p>
-                        <input asp-for="@Model.update_date" type="hidden"></input>
-                        <p class="form-control w-25">
-                            @Html.DisplayFor(model => model.update_user)
-                        </p>
-                        <input asp-for="@Model.update_user" type="hidden"></input>
+                <div class="form-group row mt-3" id="update_info">
+                    <div class="col-sm-6">
+                        <label class="control-label me-4" asp-for="@Model.update_user"></label>
+                        <input asp-for="@Model.update_user" class="form-control bg-white" type="text" readonly />
                     </div>
-                    
+                    <div class="col-sm-6">
+                        <label class="control-label me-4" asp-for="@Model.update_date"></label>
+                        <input asp-for="@Model.update_date" class="form-control bg-white" type="text" readonly />
+                    </div>
                 </div>
             </div>
 
