changed the delete modal

--- a/Views/Todo/Update.cshtml
+++ b/Views/Todo/Update.cshtml
@@ -4,6 +4,7 @@
 @{
     ViewData["Title"] = "TODOリスト";
     ViewData["FormName"] = "todoForm";
+    ViewData["ConfirmText"] = "データを削除します。よろしいですか？";
 }
 
 @section Styles {
