--- a/Views/Todo/Create.cshtml
+++ b/Views/Todo/Create.cshtml
@@ -1,4 +1,5 @@
 @model web_groupware.Models.TodoViewModel
+@using web_groupware.Utilities;
 
 @{
     ViewData["Title"] = "TODOリスト";
@@ -80,7 +81,7 @@
                     <label asp-for="@Model.description" class="form-label">説明</label>
                     <textarea asp-for="@Model.description" class="form-control" id="s_description"></textarea>
                 </div>
-
+            
                 <div class="form-group">
                     <label asp-for="@Model.File" class="form-label"></label>
                     <partial name="_FileList" model="@Model.fileModel" />
@@ -88,7 +89,7 @@
 
                 <div class="row mb-3" id="fileArea">
                     <input type="hidden" asp-for="@Model.work_dir">
-                    <input type="hidden" id="dic_cd" value="8">
+                    <input type="hidden" id="dic_cd" value="@DIC_KB_700_DIRECTORY.TODO">
                     <div class="col-12 dropArea border-0 p-2">
                         <div id="drag_area" class="text-center px-3 py-3 bg-white">
                             <span>ファイルをドラッグ＆ドロップするかクリップボードから画像を貼り付けしてください　または　</span>
