--- a/Views/Todo/Delete.cshtml
+++ b/Views/Todo/Delete.cshtml
@@ -3,6 +3,8 @@
 
 @{
     ViewData["Title"] = "TODOリスト";
+    ViewData["FormName"] = "todoForm";
+    ViewData["ConfirmText"] = "データを削除します。よろしいですか？";
 }
 
 @section Styles {
@@ -15,73 +17,74 @@
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a class="text-decoration-none" asp-controller="Home" asp-action="Index">ホーム</a></li>
                 <li class="breadcrumb-item"><a class="text-decoration-none" asp-controller="Todo" asp-action="Index">TODOリスト</a></li>
-                <li class="breadcrumb-item active" aria-current="page">新規登録</li>
+                <li class="breadcrumb-item active" aria-current="page">削除</li>
             </ol>
         </nav>
     </div>
-    <form asp-action="Create" id="todoForm" class="form-box" method="post" enctype="multipart/form-data">
+    <form asp-action="Delete" id="todoForm" class="form-box" method="post" enctype="multipart/form-data">
         <div class="card">
             <div class="card-header justify-content-between d-flex align-items-center">
                 <span>
-                    <h4 class="mb-0">新規登録</h4>
+                    <h4 class="mb-0">TODO削除</h4>
                 </span>
                 <div class="d-flex justify-content-end">
                     <button type="button" class="btn btn-secondary back" style="margin-right: 10px">
                         <i class="bi bi-arrow-return-left"></i> キャンセル
                     </button>
-                    <button type="button" class="btn btn-primary btnCreate">
-                        <i class="bi bi-plus"></i> 新規登録
+                    <button type='button' class="btn btn-danger" data-toggle='modal' data-target="#modal-delete" onClick="onConfirmModal()">
+                        <i class="bi bi-trash3"></i> 削除
                     </button>
                 </div>
             </div>
 
             <div class="card-body">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-
-                <input hidden asp-for="@Model.sendUrl" id="send_url" />
+                <input hidden asp-for="@Model.todo_no" />
+                <input hidden asp-for="@Model.Delete_files" />
+                <input hidden asp-for="@Model.has_file" />
 
                 <div class="form-group mb-3">
                     <label asp-for="@Model.public_set" class="form-label"></label>
-                    <select asp-for="@Model.public_set" class="form-select w-50  bg-white" aria-label="" id="s_public">
+                    <select asp-for="@Model.public_set" class="form-select w-50 bg-white" aria-label="" id="s_public" disabled>
                         <option value=0>非公開</option>
-                        <option value=1 selected>公開</option>
+                        <option value=1>公開</option>
                     </select>
                 </div>
 
                 <div class="form-group mb-3">
                     <label asp-for="@Model.group_set" class="form-label"></label>
-                    <select asp-for="@Model.group_set" class="form-select w-50 bg-white" aria-label="" id="s_group">
+                    <select asp-for="@Model.group_set" class="form-select w-50 bg-white" aria-label="" id="s_group" disabled>
                         <option value=0>複数人</option>
-                        <option value=1 selected>グループ</option>
+                        <option value=1>グループ</option>
                     </select>
                 </div>
 
                 <div class="form-group mb-3">
                     <label asp-for="@Model.deadline_set" class="form-label">期限</label>
-                    <select asp-for="@Model.deadline_set" class="form-select w-50 bg-white" aria-label="期限" id="s_deadline" onchange=showEndDate()>
+                    <select asp-for="@Model.deadline_set" class="form-select w-50 bg-white" aria-label="期限" id="s_deadline" onchange=showEndDate() disabled>
                         <option value="0">期限なし</option>
-                        <option selected value=1>期限あり</option>
+                        <option value=1>期限あり</option>
                     </select>
                 </div>
 
                 <div class="form-group mb-3" id="deadline_date_area">
                     <label asp-for="@Model.deadline_set" class="form-label">期限あり</label>
                     <div class="input-group position-relative me-3 w-50" id="input-repeatdate-from-wrapper">
-                        <input type="text" class="form-control bg-white site_calendar" asp-for="@Model.deadline_date" data-provide="datepicker" data-date-format="yyyy/mm/dd" data-date-autoclose="true" data-date-container="#input-repeatdate-from-wrapper" readonly>
+                        <input type="text" class="form-control bg-white site_calendar" asp-for="@Model.deadline_date" data-provide="datepicker" data-date-format="yyyy/mm/dd" data-date-autoclose="true" data-date-container="#input-repeatdate-from-wrapper" disabled>
                         <span class="input-group-text" id="repeatdate-from-icon"><i class="bi bi-calendar-event"></i></span>
                     </div>
                 </div>
 
                 <div class="form-group mb-3">
                     <label asp-for="@Model.title" class="form-label">タイトル</label>
-                    <input asp-for="@Model.title" type="text" class="form-control bg-white" id="s_title" required>
+                    <input asp-for="@Model.title" type="text" class="form-control bg-white" id="s_title" required disabled>
                 </div>
 
                 <div class="form-group mb-3">
                     <label asp-for="@Model.description" class="form-label">説明</label>
-                    <textarea asp-for="@Model.description" class="form-control bg-white" id="s_description" row="3"></textarea>
+                    <textarea asp-for="@Model.description" class="form-control bg-white" id="s_description" disabled></textarea>
                 </div>
-            
+
                 <div class="form-group">
                     <label asp-for="@Model.File" class="form-label"></label>
                     <partial name="_FileList" model="@Model.fileModel" />
@@ -90,12 +93,14 @@
                 <div class="row mb-3" id="fileArea">
                     <input type="hidden" asp-for="@Model.work_dir">
                     <input type="hidden" id="dic_cd" value="@DIC_KB_700_DIRECTORY.TODO">
+                    <input type="hidden" id="dir_no" value="@Model.todo_no">
+
                     <div class="col-12 dropArea border-0 p-2">
                         <div id="drag_area" class="text-center px-3 py-3 bg-white">
                             <span>ファイルをドラッグ＆ドロップするかクリップボードから画像を貼り付けしてください　または　</span>
                             <label class="input-group-btn hand-pointer">
                                 <span class="btn btn-secondary">
-                                    ファイル選択<input type="file" multiple class="d-none" asp-for="@Model.File">
+                                    ファイル選択<input type="file" multiple class="d-none" asp-for="@Model.File" disabled>
                                 </span>
                             </label>
                             <br>
@@ -103,17 +108,18 @@
                         </div>
                     </div>
                 </div>
-                @* <div class="form-group mb-3">
+
+                <div class="form-group mb-3">
                     <label asp-for="@Model.response_status" class="form-label">期限</label>
                     <select asp-for="@Model.response_status" class="form-select w-50 bg-white" aria-label="状態" id="s_response" disabled>
-                        <option value="0" selected>未対応</option>
+                        <option value="0">未対応</option>
                         <option value=1>対応中</option>
                         <option value=2>完了</option>
                     </select>
-                </div> *@
+                </div>
                 <div class="col-md-6 mb-3">
                     <label asp-for="@Model.MyStaffList" class="control-label"></label>
-                    <select asp-for="@Model.MyStaffList" class="form-control bg-white" multiple>
+                    <select asp-for="@Model.MyStaffList" class="form-control bg-white" multiple disabled>
                         <option value=""></option>
                         <optgroup label="グループ">
                             @if (Model.GroupList != null)
@@ -136,6 +142,26 @@
                     </select>
                     <span asp-validation-for="@Model.staffList" class="text-danger"></span>
                 </div>
+                <div class="form-group row mt-3" id="create_info">
+                    <div class="col-sm-6">
+                        <label class="control-label me-4" asp-for="@Model.create_user"></label>
+                        <input asp-for="@Model.create_user" class="form-control bg-white" type="text" readonly />
+                    </div>
+                    <div class="col-sm-6">
+                        <label class="control-label me-4" asp-for="@Model.create_date"></label>
+                        <input asp-for="@Model.create_date" class="form-control bg-white" type="text" readonly />
+                    </div>
+                </div>
+                <div class="form-group row mt-3" id="update_info">
+                    <div class="col-sm-6">
+                        <label class="control-label me-4" asp-for="@Model.update_user"></label>
+                        <input asp-for="@Model.update_user" class="form-control bg-white" type="text" readonly />
+                    </div>
+                    <div class="col-sm-6">
+                        <label class="control-label me-4" asp-for="@Model.update_date"></label>
+                        <input asp-for="@Model.update_date" class="form-control bg-white" type="text" readonly />
+                    </div>
+                </div>
             </div>
 
             <div class="card-footer">
@@ -143,14 +169,13 @@
                     <button type="button" class="btn btn-secondary back" style="margin-right: 10px">
                         <i class="bi bi-arrow-return-left"></i> キャンセル
                     </button>
-                    <button type="button" class="btn btn-primary btnCreate">
-                        <i class="bi bi-plus"></i> 新規登録
+                    <button type='button' class="btn btn-danger" data-toggle='modal' data-target="#modal-delete" onClick="onConfirmModal()">
+                        <i class="bi bi-trash3"></i> 削除
                     </button>
                 </div>
             </div>
         </div>
     </form>
-        
 </div>
 
 @section Scripts {
@@ -161,5 +186,3 @@
         <script src="~/js/File.js" asp-append-version="true"></script>
     }
 }
-
-
