--- a/Views/Todo/Update.cshtml
+++ b/Views/Todo/Update.cshtml
@@ -4,7 +4,6 @@
 @{
     ViewData["Title"] = "TODOリスト";
     ViewData["FormName"] = "todoForm";
-    ViewData["ConfirmText"] = "データを削除します。よろしいですか？";
 }
 
 @section Styles {
@@ -31,9 +30,6 @@
                     <button type="button" class="btn btn-secondary back" style="margin-right: 10px">
                         <i class="bi bi-arrow-return-left"></i> キャンセル
                     </button>
-                    <button type="button" class="btn btn-danger data-toggle='modal' data-target="#modal-delete" onClick="onDeleteConfirmModal()" btnDelete" style="margin-right: 10px">
-                        <i class="bi bi-delete"></i>  削除
-                    </button>
                     <button type="button" class="btn btn-primary btnUpdate">
                         <i class="bi bi-floppy"></i> 保存
                     </button>
@@ -48,7 +44,7 @@
 
                 <div class="form-group mb-3">
                     <label asp-for="@Model.public_set" class="form-label"></label>
-                    <select asp-for="@Model.public_set" class="form-select w-50" aria-label="" id="s_public">
+                    <select asp-for="@Model.public_set" class="form-select w-50 bg-white" aria-label="" id="s_public">
                         <option value=0>非公開</option>
                         <option value=1>公開</option>
                     </select>
@@ -56,7 +52,7 @@
 
                 <div class="form-group mb-3">
                     <label asp-for="@Model.group_set" class="form-label"></label>
-                    <select asp-for="@Model.group_set" class="form-select w-50" aria-label="" id="s_group">
+                    <select asp-for="@Model.group_set" class="form-select w-50 bg-white" aria-label="" id="s_group">
                         <option value=0>複数人</option>
                         <option value=1>グループ</option>
                     </select>
@@ -64,7 +60,7 @@
 
                 <div class="form-group mb-3">
                     <label asp-for="@Model.deadline_set" class="form-label">期限</label>
-                    <select asp-for="@Model.deadline_set" class="form-select w-50" aria-label="期限" id="s_deadline" onchange=showEndDate()>
+                    <select asp-for="@Model.deadline_set" class="form-select w-50 bg-white" aria-label="期限" id="s_deadline" onchange=showEndDate()>
                         <option value="0">期限なし</option>
                         <option value=1>期限あり</option>
                     </select>
@@ -80,12 +76,12 @@
 
                 <div class="form-group mb-3">
                     <label asp-for="@Model.title" class="form-label">タイトル</label>
-                    <input asp-for="@Model.title" type="text" class="form-control" id="s_title" required>
+                    <input asp-for="@Model.title" type="text" class="form-control bg-white" id="s_title" required>
                 </div>
 
                 <div class="form-group mb-3">
                     <label asp-for="@Model.description" class="form-label">説明</label>
-                    <textarea asp-for="@Model.description" class="form-control" id="s_description"></textarea>
+                    <textarea asp-for="@Model.description" class="form-control bg-white" id="s_description"></textarea>
                 </div>
 
                 <div class="form-group">
@@ -114,7 +110,7 @@
 
                 <div class="form-group mb-3">
                     <label asp-for="@Model.response_status" class="form-label">期限</label>
-                    <select asp-for="@Model.response_status" class="form-select w-50" aria-label="状態" id="s_response">
+                    <select asp-for="@Model.response_status" class="form-select w-50 bg-white" aria-label="状態" id="s_response">
                         <option value="0">未対応</option>
                         <option value=1>対応中</option>
                         <option value=2>完了</option>
@@ -122,7 +118,7 @@
                 </div>
                 <div class="col-md-6 mb-3">
                     <label asp-for="@Model.MyStaffList" class="control-label"></label>
-                    <select asp-for="@Model.MyStaffList" class="form-control" multiple>
+                    <select asp-for="@Model.MyStaffList" class="form-control bg-white" multiple>
                         <option value=""></option>
                         <optgroup label="グループ">
                             @if (Model.GroupList != null)
@@ -172,9 +168,6 @@
                     <button type="button" class="btn btn-secondary back" style="margin-right: 10px">
                         <i class="bi bi-arrow-return-left"></i> キャンセル
                     </button>
-                    <button type="button" class="btn btn-danger data-toggle='modal' data-target="#modal-delete" onClick="onDeleteConfirmModal()" btnDelete" style="margin-right: 10px">
-                        <i class="bi bi-delete"></i>  削除
-                    </button>
                     <button type="button" class="btn btn-primary btnUpdate">
                         <i class="bi bi-floppy"></i> 保存
                     </button>
@@ -191,10 +184,4 @@
         <script src="~/js/TodoCreate.js" asp-append-version="true"></script>
         <script src="~/js/File.js" asp-append-version="true"></script>
     }
-
-    <script>
-        var deleteAction = "Delete"
-        var deleteKey = "todo_no"
-        var deleteId = $('#todo_no').val()
-    </script>
 }
