--- a/Views/Todo/Index.cshtml
+++ b/Views/Todo/Index.cshtml
@@ -70,7 +70,7 @@
                                     </div>
                                     <span class="col-2">@((item.group_set == 0) ? "複数人" : "グループ")</span>
 
-                                    <span class="col-2">@((item.deadline_set == 0) ? "期限なし" : "期限あり")</span>
+                                    <span class="col-1">@((item.deadline_set == 0) ? "期限なし" : "期限あり")</span>
                                     @if (item.deadline_date != null)
                                     {
                                         <span class="col-3 deadline-date" data-deadline-date="@item.deadline_date">@item.deadline_date</span>
@@ -79,12 +79,16 @@
                                     {
                                         <span class="col-3"></span>
                                     }
-                                    @* @if(item.has_file == 1)
+                                    @if(item.has_file > 0)
                                     {
-                                        <div class="d-flex justify-content-between">
+                                        <div class="d-flex my-auto col-1">
                                             <i class="fa fa-file"></i>
                                         </div>
-                                    } *@
+                                    }
+                                    else
+                                    {
+                                        <div class="col-1"></div>
+                                    }
                                     @{
                                         switch (item.response_status)
                                         {
