--- a/Views/Todo/Index.cshtml
+++ b/Views/Todo/Index.cshtml
@@ -15,29 +15,31 @@
 
 <div class='card'>
     <div class="card-header d-flex align-items-center">
-        <div class="d-flex gap-0 col-lg-3 col-3">
-            <label class=" my-auto text-center w-25">状態</label>
-            <select class="form-select w-50" aria-label="状態" id="select-response" onchange="filterResponse();">
-                <option value="-1" selected>All</option>
-                <option value=0>未対応</option>
-                <option value=1>対応中</option>
-                <option value=2>完了</option>
-            </select>
-        </div>
-        <div class="d-flex col-lg-3 col-3">
-            <label class=" my-auto text-center w-25">期限</label>
-            <select class="form-select w-50" aria-label="期限" id="select-deadline" onchange="filterResponse();">
-                <option value="-1" selected>未設定</option>
-                <option value=1>期限あり</option>
-                <option value=0>期限なし</option>
-            </select>
-        </div>
-        <div class="d-flex col-lg-3 col-3">
-            <div class="input-group me-3">
-                <span class="input-group-text">キーワード</span>
-                <input type="text" id="keyword" class="form-control" placeholder="キーワードを入力" aria-label="キーワード">
+        <form id="searchForm" method="post" asp-controller="Todo" asp-action="Index" class="col-9 d-flex">
+            <div class="d-flex gap-0 col-lg-3 col-3">
+                <label class=" my-auto text-center w-25">状態</label>
+                <select class="form-select w-50" asp-for="@Model.search_response_status" aria-label="状態" id="select-response" onchange="filterResponse();">
+                    <option value="-1" selected>全て</option>
+                    <option value="0">未対応</option>
+                    <option value="1">対応中</option>
+                    <option value="2">完了</option>
+                </select>
             </div>
-        </div>
+            <div class="d-flex col-lg-3 col-3">
+                <label class=" my-auto text-center w-25">期限</label>
+                <select class="form-select w-50" asp-for="@Model.search_deadline_set" aria-label="期限" id="select-deadline" onchange="filterResponse();">
+                    <option value="-1" selected>全て</option>
+                    <option value="1">期限あり</option>
+                    <option value="0">期限なし</option>
+                </select>
+            </div>
+            <div class="d-flex col-lg-3 col-3">
+                <div class="input-group me-3">
+                    <span class="input-group-text">キーワード</span>
+                    <input type="text" id="keyword" asp-for="@Model.search_keyword" class="form-control" placeholder="キーワードを入力" aria-label="キーワード">
+                </div>
+            </div>
+        </form>
         <div class="d-flex col-lg-3 col-3">
             <a class="btn btn-primary" style="margin-left: auto" asp-action="Create">
                 <i class="bi bi-plus"></i> 新規登録
