fix deadline_date, group_set

--- a/Views/Todo/Update.cshtml
+++ b/Views/Todo/Update.cshtml
@@ -49,13 +49,13 @@
                     </select>
                 </div>
 
-                <div class="form-group mb-3">
+                @* <div class="form-group mb-3">
                     <label asp-for="@Model.group_set" class="form-label"></label>
                     <select asp-for="@Model.group_set" class="form-select w-50 bg-white" aria-label="" id="s_group">
                         <option value=0>複数人</option>
                         <option value=1>グループ</option>
                     </select>
-                </div>
+                </div> *@
 
                 <div class="form-group mb-3">
                     <label asp-for="@Model.deadline_set" class="form-label">期限</label>
