--- a/Views/Board/Update.cshtml
+++ b/Views/Board/Update.cshtml
@@ -283,8 +283,8 @@
                         <label asp-for="@Model.CommentFile" class="form-label"></label>
                         <partial name="_CommentFileList" model="@Model.commentFileModel" />
                     </div>
-
-                    <div class="row mb-3" id="fileArea">
+                    
+                    <div class="row mb-3" id="commentFileArea">
                         <input type="hidden" asp-for="@Model.comment_work_dir">
                         <input type="hidden" id="comment_dic_cd" value="@DIC_KB_700_DIRECTORY.BOARDCOMMENT">
                         
