--- a/Views/Memo/_MemoBody.cshtml
+++ b/Views/Memo/_MemoBody.cshtml
@@ -10,7 +10,7 @@
     <div class="card-header justify-content-between">
         <h4 class="mb-0"></h4>
         <div class="col-auto d-flex">
-            <form id="selectionForm" asp-controller="Memo" asp-action="Filter" method="post" asp-route-category="@Model.category" class="d-flex">
+            <form id="selectionForm" asp-controller="Memo" asp-action="Index" method="post" asp-route-category="@Model.category" class="d-flex">
                 <div class="d-flex col-xl-5 col-3 me-3">
                     <div class="input-group">
                         <span class="input-group-text">タイトル・内容</span>
