--- a/Views/Memo/Memo_received.cshtml
+++ b/Views/Memo/Memo_received.cshtml
@@ -26,6 +26,7 @@
         $("#filter_state").val(@Model.selectedState);
         $("#filter_user").val(@Model.selectedUser);
         $("#filter_keyword").val(@Model.keyword);
+        $("#filter_personal_state").val('@Model.selectedPersonalState');
         var viewMode = '@ViewBag.ViewMode';
     </script>
     @{
